= Highlight CHANGELOG
:reproducible:
:sectanchors:
:sectnums!:
:toc-title: Contents
:toc: left
:toclevels: 1

== highlight 3.59

xx.10.2020

  - mark_lines.lua plug-in accepts line ranges as input
  - improved Ruby code folding (outhtml_codefold plug-in)

== highlight 3.58

07.09.2020

  - improved `--force` fallback argument handling (https://gitlab.com/saalen/highlight/-/issues/163)
  - added C++ attribute syntax support
  - added Lua function `StoreValue` to set and retrieve information across Lua states
  - added `extras/eclipse-themes/eclipse_color_themes.py` script to retrieve themes from eclipsecolorthemes.org
  - added support for Web Assembly Text
  - updated mark_lines.lua to output 16m terminal sequences (https://gitlab.com/saalen/highlight/-/issues/164)
  - fixed issues in bash.lang (https://gitlab.com/saalen/highlight/-/issues/161)
  - fixed Bash heredoc highlighting in bash_functions.lua (https://gitlab.com/saalen/highlight/-/issues/156)
  - CLI: `highlight --version -q` only prints the version number
  - GUI: added theme contrast indicator


== highlight 3.57

12.05.2020

  - added support for Haml (https://gitlab.com/saalen/highlight/-/issues/140)
  - added support for Wren
  - added Lua function `OverrideParam`
  - fixed regression in xterm256 or truecolor output (https://gitlab.com/saalen/highlight/-/issues/152)
  - fixed `--list-scripts` with read-only language definitions (https://gitlab.com/saalen/highlight/-/issues/154)
  - improved several language definitions
  - Windows GUI: added dark mode


== highlight 3.56

06.04.2020
  
  - added support for Sequence Alignment Maps (SAM files)
  - added empty-file mode to `--no-trailing-nl` (https://gitlab.com/saalen/highlight/issues/147)
  - fixed issue with `--syntax-by-name` waiting for stdin (https://gitlab.com/saalen/highlight/-/issues/151)
  - fixed issue with `--syntax` reading matching files in the current working directory (https://gitlab.com/saalen/highlight/-/issues/151)